# psychopy-eyetracker-tobii

./: CHANGELOG.txt  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: docs.yaml  pypi.yaml
docs/: .buildinfo  index.html  objects.inv  searchindex.js
docs/.doctrees/: download.doctree  environment.pickle  index.doctree
docs/.doctrees/coder/: tobii.doctree
docs/_modules/: index.html
docs/_modules/psychopy/iohub/devices/eyetracker/eye_events/: index.html
docs/_modules/psychopy_eyetracker_tobii/tobii/eyetracker/: index.html
docs/_sources/: download.rst.txt
docs/_static/: psychopy.css
docs/coder/tobii/: index.html
docs/download/: index.html
docs/genindex/: index.html
docs/search/: index.html
docs_src/: conf.py  index.rst
psychopy_eyetracker_tobii/: __init__.py
psychopy_eyetracker_tobii/tobii/: calibration.py  default_eyetracker.yaml  eyetracker.py  settings.py  tobiiwrapper.py
tests/test_builder/: test_eyetracker_backend.py
