[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psychopy-eyetracker-tobii"
version = "0.0.3"
description = "Extension package for PsychoPy which adds support for Tobii eyetrackers to ioHub."
readme = "README.md"
requires-python = ">= 3.7"
license = {text = "GNU General Public License v3 (GPLv3)"}
authors = [
  { name = "Sol Simpson", email = "info@isolver-software.com" },
  { name = "Matthew Cutone", email = "mcutone@opensceincetools.org" },
  { name = "Jon Peirce", email = "jon@opensceincetools.org" },
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
urls.homepage = "https://github.com/psychopy/psychopy-eyetracker-tobii"
urls.changelog = "https://github.com/psychopy/psychopy-eyetracker-tobii/blob/main/CHANGELOG.txt"
urls.documentation = "https://pages.github.com/psychopy/psychopy-eyetracker-tobii"
urls.repository = "https://github.com/psychopy/psychopy-eyetracker-tobii"
dependencies = [
    "tobii_research"
]

[project.optional-dependencies]
# dependencies for building the docs
docs = [
  "psychopy",
  "sphinx",
  "furo",
]
# dependencies for running the test suite
tests = [
  "psychopy",
  "pytest",
]

[tool.setuptools.packages.find]
where = ["", "psychopy_eyetracker_tobii",]

[project.entry-points."psychopy.iohub.devices.eyetracker"]
tobii = "psychopy_eyetracker_tobii.tobii"

[project.entry-points."psychopy.experiment.components.settings.eyetracking"]
TobiiEyetrackerBackend = "psychopy_eyetracker_tobii.tobii.settings:TobiiEyetrackerBackend"

[tool.setuptools.package-data]
"*" = ["*.yaml"]
